MJ 20/04/08
- Refactoring of EDSimulator to support the application of any event queue
  implementation. The even queue can now be configured to be any extrenal class
  implementing peersim.edsim.PriorityQ. Tests show there is no noticeable
  penalty for performance. (credit to Jan Schoenherr for pointing out some
  issues with edsim)
- Fixing various problems with handling integer overflow in time management in
  EDSimulator, Heap, and Scheduler.

MJ 18/04/08
- Changed truncation to rounding (as stated in the class docs) for
  DynamicNetwork. This fixes issues with small network sizes (or small "add"
  percentages).
- Fixed bug in RandNI: it assumed it is called after insertion, while the
  specification says it is called before insertion. This caused misbehavior for
  networks of size 1, and, more annoyingly, resulted in the node with index 0
  _never_ being linked to in any network of any size
  (note that for simulations that use shuffle (and most do)
  this is not noticable) (credit for spotting goes to Balazs Banhelyi).

AM 07/04/08
- Applied the javadoc patch of Filippo Giunchedi

MJ 18/03/08
- Added a "k" parameter to WireFromFile
- Added some popular file formats to GraphPrinter (as well as GraphIO)

MJ 24/02/08
- Added a "background" parameter to PeakDistribution and improved the docs of
  DynamicNetwork and OscillatingNetwork.

AM 04/02/08
- Solved a bug in phase management for both cd and ed
  simulations: at the end of the first experiment, phase was set
  to POST_SIMULATION and in subsequent experiments it stayed that way
  (never set back to UNKNOWN_PHASE).
  (Credits to Alessandro Russo)

MJ 19/01/08
- Changed default of parameter "maxsize" in DynamicNetwork and
  OscillatingNetwork. Now the default is: no limit on the size.
- Changed confusing parameter name "network.maxSize" to
  "network.initialCapacity".
- Fixed a bug in Network.setCapacity: now it removes nodes correctly.

AM 24/12/2007
VERSION 1.0.3 RELEASED